--- a/public/css/food_list.css
+++ b/public/css/food_list.css
@@ -6,7 +6,7 @@ html {
   font-family: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
 }
@@ -54,7 +54,7 @@ nav {
     position: absolute;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 31;
 }
 
 .contentWrapper {
@@ -260,26 +260,6 @@ nav {
     margin-top: 1rem;
 }
 
-#floatingMessage {
-    z-index: 5;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.2rem;
-    background-color: #FFFFFF;
-    width: 30vw;
-    height: 100px;
-    border-radius: 1.5rem;
-    box-shadow: 0px 11px 35px 2px rgba(155, 155, 155, 0.34);
-    position: absolute;
-    bottom: 2vw;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .orderWrapper {
     overflow: auto;
     max-height: 65vh;
@@ -359,8 +339,5 @@ nav {
         width: 70vw;
     }
 
-    #floatingMessage {
-        border-radius: 0.8rem;
-        width: 60vw;
-    }
+
 }
