--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,7 @@ html {
   background-color: white;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
 }
@@ -113,25 +113,6 @@ a {
   color: #E1BEE7;
   text-decoration: none
 }
-
-#floatingMessage {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  background-color: #FFFFFF;
-  width: 30vw;
-  height: 100px;
-  border-radius: 1.5rem;
-  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.34);
-  position: absolute;
-  bottom: 2vw;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -156,10 +137,5 @@ a {
   .main {
     border-radius: 0.8rem;
     width: 85vw;
-  }
-
-  #floatingMessage {
-    border-radius: 0.8rem;
-    width: 60vw;
   }
 }
