--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -21,24 +21,32 @@
   overflow: auto;
 }
 
-#floatingMessage {
-  z-index: 5;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 1.2rem;
-  background-color: #FFFFFF;
-  width: 30vw;
-  min-height: 100px;
-  border-radius: 1.5rem;
-  box-shadow: 0px 11px 35px 2px rgba(155, 155, 155, 0.34);
-  position: absolute;
-  bottom: 5vh;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+html{
+  height: 100%;
+}
+body{
+  min-height: 100%;
+  height: 100%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+#footer{
+  position: unset;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-grow: 1;
+  flex: 1;
+  padding: 0;
+  background-color: transparent;
+}
+#footer div{
+  padding: 2rem;
+  background-color: #e8e8e8;
+}
+.confirmedOrders{
+  margin-top: 5rem;
 }
 
 @keyframes fadeIn {
@@ -95,8 +103,5 @@
 }
 
 @media only screen and (orientation:portrait) {
-  #floatingMessage {
-    border-radius: 0.8rem;
-    width: 60vw;
-  }
+
 }
